name:                imagetrove-cai-projects-db
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
category:            Database
build-type:          Simple
cabal-version:       >=1.8

executable mysql-haskell-test
  main-is:             Main.hs
  other-modules:       Acid
  build-depends:       base ==4.6.*
                     , mysql-simple
                     , text
                     , email-validate
                     , bytestring
                     , imagetrove-uploader
                     , mtl == 2.1.3.1
                     , transformers == 0.3.0.0
                     , transformers-compat == 0.3.3.3
                     , aeson == 0.7.0.6
                     , unordered-containers
                     , hashable
                     , containers
                     , multimap
                     , configurator
                     , old-locale
                     , time
                     , acid-state
                     , safecopy
